tests/snapshots/run_wpt_conformance__coreml_reduceL2_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l2.https.any.js",
    "reduceL2 float32 0D tensor empty axes",
    "coreml",
    "PASS",
)
